# yolov8_zoom_cam

./: .gitattributes  .gitignore  NOTES - !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!.txt  README.md  inference.cpp  main.cpp
backup/v1_56ms_(17_FPS)/: inference.cpp  inference.h  main.cpp
backup/v1_vcam/: main.cpp
backup/v2_vcam/: inference.cpp  main.cpp
backup/v2_webcam_mode/: CMakeLists.txt  inference.cpp
backup/v3_vcam/: main.cpp  main_webcam_v2.cpp  yolov8n.onnx
backup/v3_video_file/: main.cpp
backup/v4_vcam/: CMakeLists.txt  main.cpp
backup/v4_vcam/demo_tools/: background_subtraction.cpp
backup/v5_vcam/: inference_benchmark.cpp  main.cpp  main_video.cpp  output_windows_webcam.cpp
backup/v5_vcam/demo_tools/: background_subtraction.cpp
backup/v6_vcam_final/: inference.h  inference_benchmark.h  main.cpp  main_webcam.cpp
demo_tools/: background_subtraction.cpp
